tests/ui/chunked_embedding_private_construction.stderr
error[E0451]: fields `chunks` and `chunk_ids` of struct `ChunkedEmbedding` are private
 --> tests/ui/chunked_embedding_private_construction.rs:6:9
  |
5 |     let _ = rurico::embed::ChunkedEmbedding {
  |             ------------------------------- in this type
6 |         chunks: Vec::new(),
  |         ^^^^^^ private field
7 |         chunk_ids: Vec::new(),
  |         ^^^^^^^^^ private field
